apps/nextcloud/Ingress-tailscale-nextcloud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-tailscale
  namespace: nextcloud
spec:
  ingressClassName: tailscale
  rules:
    - host: nextcloud.cloudforest-sargas.ts.net
      http:
        paths:
          - backend:
              service:
                name: tailscale
                port:
                  number: 8080
            path: /
            pathType: Prefix
